Used pertinent semantic HTML elements, Fixed previous commit code that did not reduce Cumulative Layout Shift, Renamed images, Local SEO keywords added

--- a/assets/bootstrap/bootstrap.css
+++ b/assets/bootstrap/bootstrap.css
@@ -5993,6 +5993,9 @@ textarea.form-control-lg {
   backface-visibility: hidden;
   transition: transform 0.6s ease-in-out;
 }
+.carousel-item img{
+	height: auto;
+}
 @media (prefers-reduced-motion: reduce) {
   .carousel-item {
     transition: none;
