--- a/assets/style.css
+++ b/assets/style.css
@@ -50,10 +50,7 @@ body {
 	padding-block: 100px;
 	position: relative;
 }
-.picture.left img{
-	width: 560px;
-	height: 558px;
-}
+
 .picture.left::before {
 	content: ' ';
 	background-color: #E5975F;
@@ -72,8 +69,8 @@ body {
 }
 
 .picture img {
-	max-width: 100%;
-	height: auto !important;
+	width: 100%;
+	height: auto;
 }
 #about-me {
 	flex: 2
@@ -164,10 +161,6 @@ body {
 	font-size: 22px;
 }
 
-.item-column.mb-4.col-12.col-sm-6.col-md-4.col-lg-4.col-xl-4 img {
-	width: 438px;
-	height: 438px;
-}
 
 #services {
 	margin: auto;
@@ -215,10 +208,7 @@ body {
 #contact .container {
 	display: flex;
 }
-.picture.right img {
-	width: 418px;
-	height: 417px;
-}
+
 .picture.right::before {
 	content: ' ';
 	background-color: #BEB45A;
